testsuite/bsc.bugs/github/gh276/SuggestValueOf_NoCon.bsv.bsc-out.expected
checking package dependencies
compiling SuggestValueOf_NoCon.bsv
Error: "SuggestValueOf_NoCon.bsv", line 4, column 12: (T0003)
  Unbound constructor `DataWidth'. Perhaps `valueOf' is missing?
