testsuite/bsc.bugs/github/gh276/SuggestValueOf_NoCon.bsv
typedef 32 DataWidth;

function Bool is64 (Bit#(8) x);
   return (DataWidth == 64);
endfunction
